# embedded_system

./: .clang-tidy  .gitignore  CMakeLists.txt  CPackConfig.cmake  ClangFormat.cmake  EmbeddedSystemLibrarySettings.cmake  FetchContentDependencies.cmake  requirements.txt  results.json
CMake/: ClangFormat.cmake  ClangTidy.cmake  EmbeddedSystemLibrarySettings.cmake  FetchContentDependencies.cmake  TestSettingsESP32.cmake  UnitTestSettings.cmake
Documentation/: environment_setup.md  name_conventions.txt
HAL/: IHal.h  hal.cpp  hal.h
HAL/Platform/ESP32/: cpx_wifi.cpp  cpx_wifi.h  cpx_wifi.hpp  io_gpio.c  io_gpio.h
Process/: IProcess.hpp  proc_httpServer.cpp
Scripts/: create_CPP_HAL_files.py  create_CPP_files.py  html_to_c.py
Source/HAL/: IHal.h
Source/HAL/Platform/ESP32/: cpx_wifi.cpp  cpx_wifi.h  io_gpio.cpp  io_gpio.hpp  mem_nvs.cpp  mem_nvs.hpp
Source/HAL/Platform/ESP32/Tests/Unit_Tests/: cpx_wifi_test.txt
Source/HAL/Platform/ESP32/Tests/Unit_Tests/Fake/: esp_log.h  esp_mac.h  esp_netif.h  esp_wifi.h  esp_wifi_types.h
Source/Process/: IProcess.hpp  Process.hpp  demoProcess.cpp  demoProcess.h  proc_httpServer.cpp  proc_httpServer.hpp  process.cpp  process.h
Source/Process/Examples/: Proc_Button.cpp  Proc_Button.hpp  Proc_Leds.cpp  Proc_Leds.hpp  Proc_networkServiceManager.cpp  Proc_networkServiceManager.hpp  Proc_wifiConfigurationManager.cpp  Proc_wifiConfigurationManager.hpp  wifiConfigEvents.hpp
Source/Process/Examples/Network/: Proc_networkServiceManager.hpp  Proc_wifiConfigurationManager.hpp
Source/Process/Examples/Peripheral/: Proc_Button.hpp  Proc_Leds.cpp  Proc_Leds.hpp
Source/Process/Examples/Protocol/: Proc_httpServer.cpp  Proc_httpServer.hpp
Source/Scripts/: create_CPP_HAL_files.py  create_C_files.py  html_esp32_copy.html  output.h  test.html
Source/System/: ILog.h  error_definitions.h  system.h
Source/Tests/Unit_Test/: myFile_test.cpp
Source/Tests/Unit_Tests/: myFile_test2.cpp
System/: ILog.h  error_definitions.h  logWrapper.h  system.h
Tests/: CMakeLists.txt
Tests/Unit_Test/: myFile_test.cpp  myFile_test2.cpp
